# fast_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: lint.yml
.github/workflows/: lint.yml  main.yml  test.yml
api/: db.py  main.py
api/cruds/: done.py  task.py
api/routers/: done.py  products.py  task.py
api/schemas/: products.py
scripts/: check.sh  fix.sh
tests/: test_main.py
