[tool.black]
line-length=120

[tool.flake8]
max-line-length=120
ignore=""
exclude=[".venv/", ".dockervenv/"]

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.mypy]
install_types = true
non_interactive = true

[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
black = "^24.3.0"
flake8 = "6.1.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
pyproject-flake8 = "^6.1.0"
pydantic = "^1.8.1"
sqlalchemy = "^1.4.41"
aiomysql = "^0.2.0"

[tool.poetry.dev-dependencies]
aiosqlite = "^0.17.0"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
